# muton

./: .gitignore  .typos.toml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  build.rs  dist-workspace.toml  flake.nix  justfile
.beads/: issues.jsonl  muton.db
.github/workflows/: formatting.yml  npm-publish.yml  publish-npm-trusted.yml  release.yml  testing.yml
.sqlx/: query-0568e7f7587a5377c4c3123619cac7b594ddf11c8955495b6c9ccf3ed289583d.json  query-168392c473a0627e2fb6edf324a155381eb48a7ccf38da3f41e73868412ee46d.json  query-178b40d30c3deec7963d4d4a7851cd478bcc1e05d32b0ec412475f33923880b3.json  query-1ab815650bad7abb83a1811feea7929ea88e589344255a1739757b2ea8fda099.json  query-2fb832a5b15e2043cbe77615333059b31f6761bde020aa31882f9f5c6f4c2bfe.json  query-53e737356677b851d4dcca1aded491577e078487f40c806ceb43963b31bd8f67.json  query-5a67e24c92f8db00b2680c73b324e1f0e115a74ba93bae164486912aab510481.json  query-5c33ae424723e13922ee7e583e31443679c78f6ce937b16054a7a68d3d005b90.json  query-853658697844915280b8302ea3e138a22bddce1da3f41d716446d7b0be1f212e.json  query-88ef93aebefdd307befdacec7278d8af34134484baac680fd5375e8ce6fee259.json  query-8d731c73fdd361c5b726c7c9a5a2db8e1cec40d5eda1c9a41def89914a95d484.json  query-b061c98a23a7347d97fcbe13f839dc5a7e7526485131a8675adaf6eb24f27823.json  query-b1e3d5e20defa820fa0a9a89d1532c24c8fdb952ddac73a1b49027cb3b9f131f.json  query-d75dae5c6480230a1d4c8572422e406bd434948a0609bb8ae2707c746d9dbdf1.json  query-e77a8694febbd70c3e152f6d7dce1ac555b13055d921432eb700cfd89dc1fb90.json  query-eb7264bfe9a5fc59988855b413b09ca1efa2aeebeb4545f579ccdf6bcedfd544.json  query-fe9d3d51b5ce360872b1c5fc154be2fd8685779e44c74e2e9c18d283b7ed08f7.json
docs/: testing-baseline-inventory.md
grammar/tact/: VENDORED_COMMIT  VENDORED_METADATA
grammars/: update.sh
grammars/tact/: grammar.js
grammars/tolk/: VENDORED_COMMIT  VENDORED_METADATA  (+1 more)
migrations/: 001_init.sql
ops/: update-grammar.sh
src/: cli.rs  lib.rs  logging.rs  main.rs  runner.rs  store.rs
tests/: README.md  conformance.rs  cross_language.rs  display.rs  integration.rs  languages.rs  slug_enforcement.rs  slug_module_guard.rs  tolk_tests.rs  utils.rs
(+155 files in other folders)
