[package]
name = "muton"
version = "2.0.1"
description = "Mutation testing framework for TON smart contracts (FunC and Tact)"
repository = "https://github.com/trailofbits/muton"
homepage = "https://github.com/trailofbits/muton"
edition = "2024"

[lib]
name = "muton"
path = "src/lib.rs"

[[bin]]
name = "muton"
path = "src/main.rs"

[dependencies]
mewt = "2.0.1"
tree-sitter = "0.25"
tokio = { version = "1.45.0", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3.12"
pretty_assertions = "1.4"
tokio-test = "0.4"

[build-dependencies]
cc = "1.0"

[profile.dist]
inherits = "release"
lto = "thin"
