[package]
name = "muton"
version = "2.0.1"
edition = "2024"
description = "Mutation testing framework for TON smart contracts"
authors = ["Bo Henderson <bo.henderson@trailofbits.com>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/muton"
homepage = "https://github.com/trailofbits/muton"
keywords = ["mutation", "testing"]
categories = ["development-tools::testing", "security"]

[[bin]]
name = "muton"
path = "src/main.rs"

[dependencies]
mewt = "2.0.1"
tree-sitter = "0.25"
tokio = { version = "1.45.0", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3.12"
pretty_assertions = "1.4"
tokio-test = "0.4"

[build-dependencies]
cc = "1.0"

[profile.dist]
inherits = "release"
lto = "thin"
