[package]
name = "muton"
version = "3.1.0"
edition = "2024"
description = "Mutation testing framework for TON smart contracts"
authors = ["Bo Henderson <bo.henderson@trailofbits.com>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/muton"
homepage = "https://github.com/trailofbits/muton"
keywords = ["mutation", "testing"]
categories = ["development-tools::testing", "security"]

[[bin]]
name = "muton"
path = "src/main.rs"

[dependencies]
mewt = "3.1.0"
tree-sitter = "0.26"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.27"
pretty_assertions = "1.4"
tokio-test = "0.4"

[build-dependencies]
cc = "1.2"

[profile.dist]
inherits = "release"
lto = "thin"
